--- a/src/public/form-2.html
+++ b/src/public/form-2.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+  <script src="./form-2.js" type="module"></script>
     <form class="feedback-form" autocomplete="off">
         <label>
           Email
@@ -19,5 +20,6 @@
         </label>
         <button type="submit">Submit</button>
       </form>
+    
 </body>
 </html>
